# ClawEvalkit

./: .env  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Dockerfile.nanobot  Dockerfile.skillsbench-base  Dockerfile.skillsbench-py311  Dockerfile.skillsbench-py311-ubuntu24  LICENSE  README.md  add.md  benchmarks_task_counts.md  pyproject.toml  requirements.txt  run.py  setup.py  t5_combo_tasks.csv
.github/workflows/: deploy.yml
assets/: agentbench_results_minimax_m27.html  mock_servers.py  refactor_report.html  wildclawbench_analysis.html
assets/log/: mem_structured_failed_tasks.txt  mem_structured_rerun2.txt
assets/mock_data/: SKILL_calendar.md  SKILL_gmail.md  SKILL_google_search.md  fetch_transcript.py
assets/wheels/: fastuuid-0.14.0-cp312-cp312-macosx_11_0_arm64.whl  (+4 more)
clawevalkit/: __init__.py  cli.py  config.py  inference.py  summarizer.py
docker/: Dockerfile.base  build.sh
docs/: LARGE_FILES_FIX.md  README.md  exp88_clawevalkit_dashboard.html  experiment_plan.md  schedule.md  skillfoundry.md  suggestion.md
error_analysis/: compute_fix_rates.py  extract_failure_categories.py  extract_not_run.py  extract_unfixed_task.py  filter_failed_tasks.py  generate_agentbench_glm_prompts.py  generate_breakpoint_prompts.py  generate_clawbench_glm_prompts.py  generate_claweval_glm_prompts.py  get_f.py  get_memset.py
examples/: add_benchmark.py  quickstart.py  run_all.sh  run_gemini_flash.sh  run_minimax.sh  run_seed18.sh
exp1_agent-skill-evolution/: README.md
scripts/: count_benchmark_tasks.py  gen_index.py  generate_error_classification_prompts.py  run_breakpoint_classification.py  run_error_classification.py  sync_papers.sh  visualize_outputs_summary.py
tests/: test_config.py  test_registry.py  test_summarizer.py
work/: index.html
work/nanopro/benchmarks/scikillbench/mcp_servers_and_tools/memory_server/: .env.example  README.md  pyproject.toml  test_memory_server.py  test_memory_server_basic.py
work/nanopro/benchmarks/scikillbench/mcp_servers_and_tools/research_server/: .env.example  README.md  extracted_code.sql  pyproject.toml  test_research_server_introspect.py  test_research_server_probe.py
work/nanopro/benchmarks/scikillbench/mcp_servers_and_tools/research_server/introspection_and_probe/: quick_introspect_core.py  runtime_probe.py
work/nanopro/benchmarks/scikillbench/mcp_servers_and_tools/research_server/src/: research_mcp.py  research_server_utils.py
(+3193 files in other folders)
