[project]
name = "clawevalkit"
version = "0.1.0"
description = "ClawEvalKit — Unified evaluation framework for 8 agent benchmarks"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "ClawEvalKit Contributors"},
]
keywords = ["evaluation", "benchmark", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
agent = ["datasets>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.4.0"]
all = ["datasets>=2.0", "pytest>=8.0", "ruff>=0.4.0"]

[project.scripts]
clawevalkit = "clawevalkit.cli:main"

[project.urls]
Homepage = "https://github.com/clawevalkit/clawevalkit"
Repository = "https://github.com/clawevalkit/clawevalkit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
